# ratus

./: .gitignore  LICENSE  README.md  build.bat
.github/workflows/: build.yml
ratus-admin/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
ratus-admin/src/: App.vue  index.css  main.ts
ratus-admin/src/api/: websocket.ts
ratus-admin/src/components/: FpsCounter.vue  List.vue  Screen.vue  Settings.vue
ratus-admin/src/stores/: activeUserStore.ts  allUsersStore.ts  settingsStore.ts
ratus-admin/src/types/: index.ts
ratus-client-rust/: Cargo.toml  README.md
ratus-client-rust/src/: main.rs
ratus-server/: README.md  package.json  passkeys.json  tsconfig.json
ratus-server/src/: connection_manager.ts  handler.ts  index.ts  log.ts
